# sqbind17

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
include/sqbind17/: cast.hpp  sqbind17.hpp  types.hpp
include/sqbind17/detail/: debug.hpp  errors.hpp  malloc.hpp  sqdefinition.hpp
include/sqbind17/detail/cast/: cast_any.hpp  cast_arithemetic.hpp  cast_array.hpp  cast_function.hpp  cast_internal.hpp  cast_object.hpp  cast_string.hpp  cast_table.hpp
include/sqbind17/detail/function/: call_setup.hpp  cpp_function.hpp  stack_operation.hpp  type_traits.hpp
include/sqbind17/detail/template/: template_getter.hpp
include/sqbind17/detail/types/: holder.hpp  sqarray.hpp  sqclass.hpp  sqfunction.hpp  sqinstance.hpp  sqobject.hpp  sqstr.hpp  sqtable.hpp  squserdata.hpp  sqvm.hpp
include/sqbind17/vm/: compiler.hpp  vm.hpp
tests_cpp/: CMakelists.txt  test_cast.cpp  test_cpp_class.cpp  test_cpp_function.cpp  test_sqarray.cpp  test_sqtable.cpp
